# wine-app

./: .gitignore  LICENSE
analysis/: pyproject.toml
analysis/model/: model_lr.sav
client/: README.md  nuxt.config.js  package.json
client/components/: FormCard.vue  ResultChart.vue
client/layouts/: default.vue
client/pages/: index.vue  inspire.vue
client/store/: index.js
notebook/: EDA.ipynb
